# lea-prover

./: .gitignore  CLAUDE.md  DESIGN.md  EVALS.md  README.md  pyproject.toml
eval/: run_fqb.py  run_fqb_best_of_n.py  run_minif2f.py  run_putnam.py
eval/utils/: verify.py
examples/: cubert3.lean
lea/: agent.py  cli.py  prompt.py  providers.py  tools.py
workspace/proofs/: aimeII_2001_p3.lean  aimeII_2020_p6.lean  aimeI_2000_p7_helper.lean  aimeI_2000_p7_test.lean
